@@ -34,24 +34,27 @@
 !
 ! email: <i.c.rutt@bristol.ac.uk> or <ian.rutt@physics.org>
 !
-! GLIMMER is hosted on NeSCForge:
+! GLIMMER is hosted on berliOS.de:
 !
-! http://forge.nesc.ac.uk/projects/glimmer/
+! https://developer.berlios.de/projects/glimmer-cism/
 !
 ! +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 #ifdef HAVE_CONFIG_H
-#include <config.inc>
+#include "config.inc"
 #endif
 
 program simple_erosion
   !*FD This is a simple GLIDE test driver. It can be used to run
   !*FD the EISMINT test cases
-  use glimmer_global, only:rk,fname_length
+  use glimmer_global, only:rk
   use glide
   use simple_forcing
   use glimmer_log
   use glimmer_config
+  use glimmer_commandline
+  use glimmer_writestats_module
+  use glimmer_filenames, only : filenames_init
   use erosion
   implicit none
 
@@ -59,23 +62,31 @@ program simple_erosion
   type(simple_climate) :: climate         ! climate
   type(erosion_type) :: er           ! erosion
   type(ConfigSection), pointer :: config  ! configuration stuff
-  character(len=fname_length) :: fname   ! name of paramter file
   real(kind=rk) time
+  real(kind=dp) t1,t2
+  integer clock,clock_rate
 
-  write(*,*) 'Enter name of GLIDE configuration file to be read'
-  read(*,*) fname
+  call glimmer_GetCommandline()
   
   ! start logging
-  call open_log(unit=50, fname=logname(fname))
+  call open_log(unit=50, fname=logname(commandline_configname))
   
+  ! setup paths
+  call filenames_init(commandline_configname)
+
   ! read configuration
-  call ConfigRead(fname,config)
+  call ConfigRead(commandline_configname,config)
+
+  ! start timing
+  call system_clock(clock,clock_rate)
+  t1 = real(clock,kind=dp)/real(clock_rate,kind=dp)
 
   ! initialise GLIDE
   call glide_config(model,config)
   call simple_initialise(climate,config)
   call glide_initialise(model)
   call er_initialise(er,config,model)
+  call CheckSections(config)
 
   ! fill dimension variables
   call glide_nc_fillall(model)
@@ -95,4 +106,8 @@ program simple_erosion
   ! finalise GLIDE
   call er_finalise(er)
   call glide_finalise(model)
+  call system_clock(clock,clock_rate)
+  t2 = real(clock,kind=dp)/real(clock_rate,kind=dp)
+  call glimmer_writestats(commandline_resultsname,commandline_configname,t2-t1)
+  call close_log
 end program simple_erosion
